<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="never"
        android:title="@string/menu_text_search"/>
     <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:showAsAction="always"
        android:title="@string/menu_text_home"/>
    <item
        android:id="@+id/menu_new_version"
        android:icon="@drawable/ic_download"
        android:showAsAction="never"
        android:title="@string/menu_text_new_version"/>
    <item
        android:id="@+id/menu_preferences"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never"
        android:title="@string/menu_text_preferences"/>   
    <item
        android:id="@+id/menu_exit"
        android:icon="@drawable/ic_exit"
        android:showAsAction="never"
        android:title="@string/menu_text_exit"/>

</menu>