<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingTop="1dip" >

    <TextView
        android:id="@+id/tvNoLicenceNotification"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:gravity="left"
        android:singleLine="false"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etJMBG"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/et_enter_jmbg"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etNameSurname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/et_enter_namesurname"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_enter_mail"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <Spinner
        android:id="@+id/spRetailStoresRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnUserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableLeft="@drawable/ic_register"
        android:gravity="left|center_vertical"
        android:text="@string/btn_send_request" />

</LinearLayout>