<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/twCurrentRetailStore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_current_retail_store"
        android:textSize="15dp" />

    <ProgressBar
        android:id="@+id/pbGetArticleState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/spRetailStore"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/twCurrentRetailStore"
        android:layout_marginTop="14dp"
        android:text="@string/tv_choose_retail_store"
        android:textSize="15dp" />

    <Spinner
        android:id="@+id/spRetailStore"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" />

    <Button
        android:id="@+id/btnApplySettings"
        android:layout_width="151dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spRetailStore"
        android:layout_centerHorizontal="true"
        android:drawableLeft="@drawable/ic_apply"
        android:gravity="left|center_vertical"
        android:text="@string/btn_apply" />

</RelativeLayout>